# rylogic_code

./: .editorconfig  .gitignore  .hgignore  .hgtags  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Jenkinsfile  Rylogic.code-workspace  Rylogic.nuspec  Rylogic.sln  RylogicEnv.template.cmd  TODO.txt  batch_template.cmd  build-everything.py  deploy_template.py  diff_pr.cmp7  diff_python_tools.cmp7  diff_rylogic.cmp7  exclusions.dic  imgui.ini  nuget.config  packages.config  readme.md  readme.txt  requirements.txt  shadertoolsconfig.json
.github/: copilot-instructions.md
.github/workflows/: build-csharp-projects.yml  build-native-projects.yml  build-solution.yml  net-rylogic.yml  net-rylogic.yml.disabled  py-rylogic.yml  workflow.yml
.pyenv/: pyvenv.cfg
.pyenv/Scripts/: activate  activate.bat
art/: .gitignore  icon.pdn  installer_banner_bkgd.pdn  installer_banner_top.pdn  p3d_export.blender.py
art/models/: bunny_lowpoly.p3d
art/pdn/: auto_range.pdn  banner.pdn  candlestick_chart.pdn  chain.pdn  constraints.pdn  market_depth.pdn  media_button.pdn  movie_film.pdn  piano.pdn  scales.pdn  set_square.pdn  slide_switch.pdn  space_invaders.pdn  space_invaders_text.pdn  ufo.pdn  visible_hidden.pdn
art/working/: green_quad_button.pdn  letter_circle.pdn  logo.pdn  rs232.pdn  rylogic_logo_sq.pdn
dlang/: build.py  build_all.cmd  denv.cmd
graveyard/: AVLTree.h  BinaryTree.h  D3DConsole.cpp  D3DConsole.h  D3DConsole2.cpp  D3DConsole2.h  DInputLib.cpp  DInputLib.h  PRBucketSorter.h  PRList.h  PRQuadTree.h  PRSortedList.h  TestBucketSorter.cpp  Utils.h  Variant.h  WinConsole.cpp  WinConsole.h  prscript.h  prscriptloader.h  prscriptsaver.h  scriptreader.h
graveyard/Ase2X/: Ase2X.cpp  Ase2X.h
graveyard/AseLoader/: AseLoader.cpp  AseLoader.h  AseLoader.vcproj
include/cmd/: wait.cmd  (+3 more)
lib/: readme.txt
miscellaneous/: Batch File Examples.bat  C++ interview questions.txt  CodeMaid.settings  DeleteAllTemporaries.bat  DeleteGameTemporaries.bat  FaceId.xls  High CPU Use Causes.txt  PhysicsDesign.001  Polytope Collision.rar  Quotes.txt  Rotation.xls  Terrain.rar  VectorCalculator.xls  ascii_codes.txt  cert.pfx  copy paths to clipboard.bat  enum_generator.h  matrix multiply.xls  pr.clang-format  prArray_vs_prString.cmp7  str-dn1080.json
projects/: Project Options Checklist.txt  Rylogic.pfx  ToDo.txt  rylogic-code-signing-certificate.pfx
projects/apps/AllKeys/app/src/main/cpp/: CMakeLists.txt  event.cpp  event.h  fluid_event_jni.cpp  fluid_player_jni.cpp  fluid_sequencer_jni.cpp  fluid_synth_jni.cpp  fluidsynth_jni.cpp  forward.h  id_type.h  jni_bytearray.h  jni_field.h  jni_string.h  player.cpp  player.h  sequencer.cpp  sequencer.h  synth.cpp  synth.h
projects/rylogic/py-rylogic/: .gitignore  LICENSE  README.md  pyproject.toml
projects/rylogic/py-rylogic/rylogic/: __init__.py  bbox.py  colour.py  ldraw.py  vector.py
projects/rylogic/py-rylogic/rylogic/gfx/: colour.py
projects/rylogic/py-rylogic/rylogic/ldraw/: ldraw.py
projects/rylogic/py-rylogic/rylogic/math/: bbox.py  constants.py  operations.py  variable_int.py  vector.py
projects/rylogic/py-rylogic/tests/: test_ldraw.py  test_vector.py
projects/rylogic/py-rylogic/tests/gfx/: test_colour32.py
projects/rylogic/py-rylogic/tests/ldraw/: test_ldraw.py
projects/rylogic/py-rylogic/tests/math/: test_bbox.py  test_operations.py  test_vector.py
python/: test.py
script/: BatchBuild.py  Bookmark.py  Build.csx  Build.py  BuildAllConfigs.py  BuildDocs.py  BuildInstaller.csx  BuildInstaller.py  BuildShader.csx  BuildShader.py  BuildShader2.py  CmdTool.py  CodeSync.csx  Compile.py  Copy.py  CreatePfx.ps1  DeployBin.py  DeployLib.csx  DeployLib.py  DeployTemplate.py  DumpBin.py  EmbedFile.py  FormatCode.py  Handles.py  HarvestFiles.csx  HtmlExpand.py  InstallNugetCache.csx  LineCount.py  Make.py  Make2.py  Nuget.csx  ProjFixUp.csx  ReloadingInteractiveConsole.py  RunTests.csx  RunUnitTests.csx  RunUnitTests.py  Rylogic.py  RylogicAssembly.py  RylogicAssemblyPostBuild.py  TextTemplate.py  (+12 more)
tools/: MakeJunctions.bat  _build_shader.cmd  _lib_copy.cmd  _publish_bin.cmd  _publish_bin.py  _publish_lib.cmd  _publish_lib.py  check_clr_dependencies.cmd  cl.cmd  elevate.cmd  handles.cmd  pp.cmd  run.cmd  vsenv.cmd
typescript/: .gitignore  rylogic.sln  tslint.json
(+11301 files in other folders)
