[build-system]
requires = ["setuptools>=75", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "rylogic"
version = "0.1.0"
description = "Python bindings for the Rylogic library"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
license-files = ["LICENSE"]
#license = { file = "LICENSE" }
authors = [
    {name = "Paul Ryland", email = "support@rylogic.co.nz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/psryland/rylogic_code"
"Bug Tracker" = "https://github.com/psryland/rylogic_code/issues"

# If you have dependencies, add them here
# [project.dependencies]
# some-package = ">=1.0.0"
